--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 	<meta charset="UTF-8">
 	<meta name="description" content="Clipboard - A history of everything you copy">
@@ -156,9 +156,9 @@
 					</ul>
 				</div>
 				<div class="grid-col-3 social-links">
-					<a href="#"><img src="images/core-img/icon-facebook.svg" alt="Facebook icon"></a>
-					<a href="#"><img src="images/core-img/icon-twitter.svg" alt="Twitter icon"></a>
-					<a href="#"><img src="images/core-img/icon-instagram.svg" alt="Instagram icon"></a>
+					<a href="#" class="facebook"></a>
+					<a href="#" class="twitter"></a>
+					<a href="#" class="instagram"></a>
 				</div>
 			</div>
 		</footer>
